# ass

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  LICENSE  main.cpp  make_coverage_report.py  readme.md
.github/workflows/: cmake.yml  linux.yml
ass/include/ass/: enum_set.hpp  fixed_unordered_map.hpp
ass/include/ass/bit/: bit_scan_constexpr.hpp
ass/include/ass/detail/: enum_map_trivial.hpp  fixed_unordered_map_non_trivial.hpp  fixed_unordered_map_trivial.hpp
ass/include/ass/enum/: enum_as_index.hpp
code/ass/include/ass/: enum_map.hpp  enum_set.hpp  fixed_bitset.hpp  fixed_unordered_map.hpp
code/ass/include/ass/bit/: count_ones.hpp
code/ass/include/ass/detail/: enum_map_non_trivial.hpp  enum_map_trivial.hpp  fixed_unordered_map_iterator_non_trivial.hpp  fixed_unordered_map_iterator_trivial.hpp  fixed_unordered_map_non_trivial.hpp  fixed_unordered_map_trivial.hpp
code/ass_tests/: CMakeLists.txt  enum_map_tests.cpp  fixed_map_tests.cpp  test_helpers.hpp
code/ass_tests/bit/: count_ones_tests.cpp
doc/: enum_index_converter.md  enum_map.md  enum_set.md  fixed_unordered_map.md
include/ass/: bit_span.hpp  enum_map.hpp  enum_set.hpp  fixed_bitset.hpp  fixed_unordered_map.hpp  invalid_index.hpp
include/ass/bit/: bit_count_to_type.hpp  bit_scan_constexpr.hpp  count_ones.hpp
include/ass/detail/: enum_map_iterator_non_trivial.hpp  enum_map_iterator_trivial.hpp  enum_map_non_trivial.hpp  enum_map_trivial.hpp  fixed_unordered_map_iterator_non_trivial.hpp  fixed_unordered_map_iterator_trivial.hpp  fixed_unordered_map_non_trivial.hpp  fixed_unordered_map_trivial.hpp
include/ass/enum/: enum_as_index.hpp  enum_as_index_magic_enum.hpp
include/ass/macro/: empty_bases.hpp
projects/ass/: CMakeLists.txt
projects/ass/include/ass/: enum_set.hpp  fixed_bitset.hpp  fixed_unordered_map.hpp
projects/ass/include/ass/bit/: bit_count_to_type.hpp  bit_scan_constexpr.hpp  count_ones.hpp
projects/ass/include/ass/detail/: fixed_unordered_map_iterator_non_trivial.hpp  fixed_unordered_map_iterator_trivial.hpp  fixed_unordered_map_non_trivial.hpp  fixed_unordered_map_trivial.hpp
projects/ass/include/ass/detail/bit/: count_ones_detail.hpp
projects/ass/include/ass/enum/: enum_as_index.hpp
projects/ass_tests/: .clang-tidy  bit_count_to_type_tests.cpp  bit_scan_test.cpp  count_ones_tests.cpp  enum_set_tests.cpp  fixed_bitset_tests.cpp  fixed_map_tests.cpp
projects/ass_tests/enum/: enum_as_index.cpp
tests/: .clang-tidy  CMakeLists.txt  bit_span_tests.cpp  enum_map_tests.cpp  enum_set_tests.cpp  fixed_bitset_tests.cpp  fixed_map_tests.cpp  test_helpers.hpp
tests/bit/: count_ones_tests.cpp
tests/cmake/: generic_compile_options.cmake
